Agrega charlas de Chihau Chau y María Paz Gillet

--- a/main/static/index.html
+++ b/main/static/index.html
@@ -416,19 +416,19 @@
                     <!-- End Charla 4 -->
 
                     <!-- Charla 5 -->
-                    <!--
+
                     <div class="panel panel-default">
                       <div class="speaker-wrapper">
-                        <img src="{% static 'img/speaker/fernando_ruiz.jpg'%}" class="img-responsive img-circle" alt="Foto Fernando Ruiz" />
+                        <img src="{% static 'img/speaker/maria_gillet.png'%}" class="img-responsive img-circle" alt="Foto Maria Paz Gillet" />
                       </div>
                       <div class="panel-heading">
                         <div class="panel-title">
                           <div class="time">
                             <i class="fa fa-clock-o"></i>
-                            16.00
+                            Por confirmar
                           </div>
                           <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#item5" class="collapsed">
-                            Landscape of Mobile Malware Threats
+                            Emprendimientos innovadores de clase mundial
                             <div class="pull-right fa fa-angle-up"></div>
                             <div class="pull-right fa fa-angle-down"></div>
                           </a>
@@ -438,33 +438,34 @@
                       <div id="item5" class="panel-collapse collapse">
                         <div class="panel-body">
                           <article>
-                            <p>Resumen del trabajo que realiza el equipo de Mobile Research
-                            de Inter Security. Describe las amenazas para dispositivos móviles
-                            más activas y peligrosas del último año, estadísticas de prevalencia
-                            y comportamiento, pasando desde aplicaciones que amenazan la
-                            privacidad de los usuarios, bitcoin mining, rooting, etc.</p>
-                            <p class="author"><a href="https://twitter.com/ferruiz" target="_blank"><strong><i class="fa fa-user"></i>@ferruiz</strong></a></p>
+                            <p>El objetivo de mi charla es motivar a los asistentes a
+                            atreverse a hacer emprenidimientos innovadores a pesar de los
+                            desafios y de estar en el “fín del mundo”.
+                            Complementaré mi exposición con la experiencia y aprendizajes
+                            que tuve en Happyshop y  hablaré sobre mi nuevo emprendimiento
+                            innovador basado en el Internet de las Cosas (IOT) y tecnología
+                            móvil Jooycar.</p>
+                            <p class="author"><a href="https://twitter.com/mariapazgillet" target="_blank"><strong><i class="fa fa-user"></i>@mariapazgillet</strong></a></p>
                           </article>
                         </div>
                       </div>
                     </div>
-                    -->
                     <!-- End Charla 5 -->
 
                     <!-- Charla 6 -->
-                    <!--
+
                     <div class="panel panel-default">
                       <div class="speaker-wrapper">
-                        <img src="{% static 'img/speaker/fernando_ruiz.jpg'%}" class="img-responsive img-circle" alt="Foto Fernando Ruiz" />
+                        <img src="{% static 'img/speaker/chihau.jpg'%}" class="img-responsive img-circle" alt="Foto Chihau Chau" />
                       </div>
                       <div class="panel-heading">
                         <div class="panel-title">
                           <div class="time">
                             <i class="fa fa-clock-o"></i>
-                            17.00
+                            Por confirmar
                           </div>
                           <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#item6" class="collapsed">
-                            Landscape of Mobile Malware Threats
+                            Desarrollando Aplicaciones para Android Wear
                             <div class="pull-right fa fa-angle-up"></div>
                             <div class="pull-right fa fa-angle-down"></div>
                           </a>
@@ -474,17 +475,20 @@
                       <div id="item6" class="panel-collapse collapse">
                         <div class="panel-body">
                           <article>
-                            <p>Resumen del trabajo que realiza el equipo de Mobile Research
-                            de Inter Security. Describe las amenazas para dispositivos móviles
-                            más activas y peligrosas del último año, estadísticas de prevalencia
-                            y comportamiento, pasando desde aplicaciones que amenazan la
-                            privacidad de los usuarios, bitcoin mining, rooting, etc.</p>
-                            <p class="author"><a href="https://twitter.com/ferruiz" target="_blank"><strong><i class="fa fa-user"></i>@ferruiz</strong></a></p>
+                            <p>Android Wear es una plataforma para dispositivos vestibles
+                            que extiende los límites de las aplicaciones para smartphones y
+                            tablets Android, permitiendo a los usuarios interactuar de
+                            formas distintas en contextos diferentes con sus aplicaciones.
+                            En esta charla los asistentes podrán aprender lo sencillo que
+                            es adaptar sus aplicaciones para que soporten las características
+                            que Android Wear proporciona, descubriendo las principales APIs y
+                            herramientas para diseñar, desarrollar y distribuir aplicaciones
+                            para los relojes que soportan esta plataforma.</p>
+                            <p class="author"><a href="https://twitter.com/chihau" target="_blank"><strong><i class="fa fa-user"></i>@chihau</strong></a></p>
                           </article>
                         </div>
                       </div>
                     </div>
-                    -->
                     <!-- End Charla 6 -->
 
                     <!-- Charla 7 -->
@@ -1017,28 +1021,11 @@ ingeniería de software
           </div>
         </div>
       </div>
-<!-- Por confirmar
+
       <div class="col-md-3 col-sm-3 col-xs-6">
         <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
           <div class="img-wrapper">
-          <img src="{% static 'img/speaker/maria_gillet.jpg' %}" class="img-responsive img-circle" alt="Foto Maria Paz Gillet" />
-          </div>
-          <div class="name">Maria Paz Gillet</div>
-          <div class="sub">CEO & Co-Founder en Jooycar</div>
-          <p class="small"></p>
-          <div class="social-link">
-            <a href="https://twitter.com/mariapazgillet"><span class="fa fa-twitter"></span></a>
-            <a href="https://www.linkedin.com/in/mariapazgillet"><span class="fa fa-linkedin"></span></a>
-          </div>
-        </div>
-      </div>
--->
-      <div class="clearfix visible-xs"></div>
-<!-- Por confirmar
-      <div class="col-md-3 col-sm-3 col-xs-6">
-        <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
-          <div class="img-wrapper">
-          <img src="{% static 'img/speaker/maria_gillet.jpg' %}" class="img-responsive img-circle" alt="Foto Maria Paz Gillet" />
+          <img src="{% static 'img/speaker/maria_gillet.png' %}" class="img-responsive img-circle" alt="Foto Maria Paz Gillet" />
           </div>
           <div class="name">Maria Paz Gillet</div>
           <div class="sub">CEO & Co-Founder en Jooycar</div>
@@ -1050,6 +1037,24 @@ ingeniería de software
         </div>
       </div>
 
+      <div class="clearfix visible-xs"></div>
+
+      <div class="col-md-3 col-sm-3 col-xs-6">
+        <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
+          <div class="img-wrapper">
+          <img src="{% static 'img/speaker/chihau.jpg' %}" class="img-responsive img-circle" alt="Foto Chihau Chau" />
+          </div>
+          <div class="name">Chihau Chau</div>
+          <div class="sub">Cp-founder en SmartHarvest & fundador de GDG Valparaíso</div>
+          <p class="small"></p>
+          <div class="social-link">
+            <a href="https://twitter.com/chihau"><span class="fa fa-twitter"></span></a>
+            <a href="https://www.linkedin.com/in/chihau"><span class="fa fa-linkedin"></span></a>
+          </div>
+        </div>
+      </div>
+
+<!-- Por confirmar
       <div class="col-md-3 col-sm-3 col-xs-6">
         <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
           <div class="img-wrapper">
@@ -1149,8 +1154,8 @@ ingeniería de software
         <br/>
         <div class="row">
           <ul class="list-inline">
-            <li><a href="http://www.inf.utfsm.cl" target="_blank"><img class="org-logo" src="static/img/patrocinio/di.jpg" alt="Logo D I" /></a></li>
             <li><a href="http://www.usm.cl" target="_blank"><img class="org-logo" src="static/img/patrocinio/utfsm.png" alt="Logo U T F S M" /></a></li>
+            <li><a href="http://www.inf.utfsm.cl" target="_blank"><img class="org-logo" src="static/img/patrocinio/di.jpg" alt="Logo D I" /></a></li>
           </ul>
         </div>
     </div>
