Agrega expositor esteban huenuman

--- a/main/static/index.html
+++ b/main/static/index.html
@@ -681,6 +681,46 @@ ingeniería de software
                     </div>
                     <!-- End Charla 8 -->
 
+                    <!-- Charla 10 -->
+                    <div class="panel panel-default">
+                      <div class="speaker-wrapper">
+                        <img src="{% static 'img/speaker/esteban_huenuman.jpg' %}" class="img-responsive img-circle" alt="Foto Esteban Huenuman" />
+                      </div>
+                      <div class="panel-heading">
+                        <div class="panel-title">
+                          <div class="time"><i class="fa fa-clock-o"></i>
+                            15.00
+                          </div>
+                          <a data-toggle="collapse" data-parent="#panelTimelineTwo" href="#item8" class="collapsed">
+                            Mobile-QTI: Sistema Interactivo de Aprendizaje Móvil bajo la Especificación IMS-QTI para Evaluación Formativa.
+                            <div class="pull-right fa fa-angle-up"></div>
+                            <div class="pull-right fa fa-angle-down"></div>
+                          </a>
+                        </div>
+                      </div>
+
+                      <div id="item8" class="panel-collapse collapse">
+                        <div class="panel-body">
+                          <article>
+                            <p>El uso de nuevas tecnologías en las salas de clase ya no es
+                            menor. Considerando que toda persona, incluso niños, ya posee
+                            más de algún dispositivo móvil. Esto abre las puertas a desarrollar
+                            aplicaciones que ayuden a los estudiantes a aprender de una forma más
+                            didáctica y llamativa. Mobile-QTI es una plataforma interactiva que
+                            ayuda al proceso de evaluaciones formativas en las salas de clase.
+                            Está enfocada a generar un aprendizaje participativo y ágil. Las
+                            preguntas que se utilizan están diseñadas bajo la especificación
+                            IMS-QTI la cual contiene varios modelos, el profesor carga sus
+                            preguntas desde su portátil y luego los alumnos interactúan con el
+                            profesor utilizando sus teléfonos móviles.
+                            </p>
+                            <p class="author"><a><strong><i class="fa fa-user"></i>Esteban Huenumán</strong></a></p>
+                          </article>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Charla 8 -->
+
 
                     <!-- END CHARLAS DIA 2-->
                   </div>
@@ -1045,7 +1085,7 @@ ingeniería de software
           <img src="{% static 'img/speaker/chihau.jpg' %}" class="img-responsive img-circle" alt="Foto Chihau Chau" />
           </div>
           <div class="name">Chihau Chau</div>
-          <div class="sub">Cp-founder en SmartHarvest & fundador de GDG Valparaíso</div>
+          <div class="sub">Co-founder en SmartHarvest & fundador de GDG Valparaíso</div>
           <p class="small"></p>
           <div class="social-link">
             <a href="https://twitter.com/chihau"><span class="fa fa-twitter"></span></a>
@@ -1053,6 +1093,37 @@ ingeniería de software
           </div>
         </div>
       </div>
+
+      <div class="col-md-3 col-sm-3 col-xs-6">
+        <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
+          <div class="img-wrapper">
+          <img src="{% static 'img/speaker/esteban_huenuman.jpg' %}" class="img-responsive img-circle" alt="Foto Esteban Huenumán" />
+          </div>
+          <div class="name">Esteban Huenumán</div>
+          <div class="sub">Estudiante de Ing. Civil Informática en U. Aust</div>
+          <p class="small"></p>
+          <div class="social-link">
+          </div>
+        </div>
+      </div>
+
+      <div class="clearfix visible-xs"></div>
+<!-- Por confirmar
+      <div class="col-md-3 col-sm-3 col-xs-6">
+        <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
+          <div class="img-wrapper">
+          <img src="{% static 'img/speaker/juan_calderon.jpg' %}" class="img-responsive img-circle" alt="Foto Juan Felipe Calderón" />
+          </div>
+          <div class="name">Juan Felipe Calderón Maureira</div>
+          <div class="sub">Profesor Jornada Ing. Civil Informática en U. Andrés Bello</div>
+          <p class="small"></p>
+          <div class="social-link">
+            <a href="https://cl.linkedin.com/pub/juan-felipe-calder%C3%B3n-maureira/10/b40/8b6"><span class="fa fa-linkedin"></span></a>
+          </div>
+        </div>
+      </div>
+
+-->
 
 <!-- Por confirmar
       <div class="col-md-3 col-sm-3 col-xs-6">
@@ -1068,6 +1139,42 @@ ingeniería de software
           </div>
         </div>
       </div>
+
+      <div class="clearfix visible-xs"></div>
+-->
+
+<!-- Por confirmar
+      <div class="col-md-3 col-sm-3 col-xs-6">
+        <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
+          <div class="img-wrapper">
+          <img src="{% static 'img/speaker/juan_calderon.jpg' %}" class="img-responsive img-circle" alt="Foto Juan Felipe Calderón" />
+          </div>
+          <div class="name">Juan Felipe Calderón Maureira</div>
+          <div class="sub">Profesor Jornada Ing. Civil Informática en U. Andrés Bello</div>
+          <p class="small"></p>
+          <div class="social-link">
+            <a href="https://cl.linkedin.com/pub/juan-felipe-calder%C3%B3n-maureira/10/b40/8b6"><span class="fa fa-linkedin"></span></a>
+          </div>
+        </div>
+      </div>
+-->
+
+<!-- Por confirmar
+      <div class="col-md-3 col-sm-3 col-xs-6">
+        <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
+          <div class="img-wrapper">
+          <img src="{% static 'img/speaker/juan_calderon.jpg' %}" class="img-responsive img-circle" alt="Foto Juan Felipe Calderón" />
+          </div>
+          <div class="name">Juan Felipe Calderón Maureira</div>
+          <div class="sub">Profesor Jornada Ing. Civil Informática en U. Andrés Bello</div>
+          <p class="small"></p>
+          <div class="social-link">
+            <a href="https://cl.linkedin.com/pub/juan-felipe-calder%C3%B3n-maureira/10/b40/8b6"><span class="fa fa-linkedin"></span></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="clearfix visible-xs"></div>
 -->
 
     </section>
@@ -1179,6 +1286,7 @@ src="static/img/patrocinio/paisdigital.png" alt="Logo Fundación País Digital" 
             <li><a href="http://www.rree.utfsm.cl" target="_blank"><img class="org-logo" src="static/img/patrocinio/rree.png" alt="Logo Relaciones Estudiantiles U T F S M" /></a></li>
             <li><a href="http://www.exalumnos.usm.cl" target="_blank"><img class="org-logo" src="static/img/patrocinio/aexa.png" alt="Logo Red de Ex Alumnos U T F S M" /></a></li>
             <li><a href="http://www.valparaisocb.com" target="_blank"><img class="org-logo" src="static/img/patrocinio/vcb.jpg" alt="Logo Valparaíso Convention Bureau" /></a></li>
+            <li><a href="http://www.acti.cl" target="_blank"><img class="org-logo" src="static/img/patrocinio/acti.jpg" alt="Logo Asociación Chilena de Empresas de Tecnologías de Información Asociación Gremial" /></a></li>
             <li><a href="http://www.industrias.usm.cl" target="_blank"><img class="org-logo" src="static/img/patrocinio/industrias.png" alt="Logo" /></a></li>
           </ul>
           <div class="btn-wrapper">
