--- a/static/index.html
+++ b/static/index.html
@@ -1287,6 +1287,7 @@ src="static/img/patrocinio/paisdigital.png" alt="Logo Fundación País Digital" 
             <li><a href="http://www.exalumnos.usm.cl" target="_blank"><img class="org-logo" src="static/img/patrocinio/aexa.png" alt="Logo Red de Ex Alumnos U T F S M" /></a></li>
             <li><a href="http://www.valparaisocb.com" target="_blank"><img class="org-logo" src="static/img/patrocinio/vcb.jpg" alt="Logo Valparaíso Convention Bureau" /></a></li>
             <li><a href="http://www.acti.cl" target="_blank"><img class="org-logo" src="static/img/patrocinio/acti.jpg" alt="Logo Asociación Chilena de Empresas de Tecnologías de Información Asociación Gremial" /></a></li>
+            <li><a href="http://www.crcp.cl" target="_blank"><img class="org-logo" src="static/img/patrocinio/crcp.jpg" alt="Logo Cámara Regional de Comercio de Valparaíso" /></a></li>
             <li><a href="http://www.industrias.usm.cl" target="_blank"><img class="org-logo" src="static/img/patrocinio/industrias.png" alt="Logo" /></a></li>
           </ul>
           <div class="btn-wrapper">
