--- a/static/index.html
+++ b/static/index.html
@@ -66,7 +66,6 @@
               <div class="hero-normal">desde Valparaíso para todo Chile</div>
             </div>
           </div>
-          <a href="https://eventioz.cl/e/valparaiso-mobile-conf?from_button=yes&source=orevib&utm_campaign=or_valparaiso-mobile-conf&utm_content=integrated_button&utm_medium=integration_tool&utm_source=eventioz" target="_blank"><img src="https://eventioz.cl/e/valparaiso-mobile-conf/promotion_button.png?size=large&content=Inscribirme+ahora&from=FE4918&to=FE4918&font=FFFFFF" alt="Eventioz - valparaiso-mobile-conf"></a>
         </div>
       </div>
     </div>
@@ -425,7 +424,7 @@
                         <div class="panel-title">
                           <div class="time">
                             <i class="fa fa-clock-o"></i>
-                            Por confirmar
+                            16.00
                           </div>
                           <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#item5" class="collapsed">
                             Emprendimientos innovadores de clase mundial
@@ -462,7 +461,7 @@
                         <div class="panel-title">
                           <div class="time">
                             <i class="fa fa-clock-o"></i>
-                            Por confirmar
+                            17.00
                           </div>
                           <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#item6" class="collapsed">
                             Desarrollando Aplicaciones para Android Wear
@@ -627,7 +626,8 @@
                             <p>Realizar testing ha sido una tarea que por mucho tiempo se
                             ha creído que es una labor exclusiva por departamentos de QA.
                             Pero la agilidad nos ha enseñado y demostrado que los desarrolladores
-                            podemos (y debemos) testear nuestras aplicaciones, y bajo este concepto,
+                            podemos (y debemos) testear nuestras aplicaciones, y bajo este
+                            concepto,
                             el testing para apps móviles ha ido evolucionando de forma paulatina.
                             El objectivo de la presentación es mostrar las opciones de testing para
                             Android e iOS, incluyendo testing unitario y de interfaz gráfica para
@@ -681,9 +681,44 @@ ingeniería de software
                         </div>
                       </div>
                     </div>
-                    <!-- End Charla 8 -->
+                    <!-- End Charla 9 -->
 
                     <!-- Charla 10 -->
+                    <div class="panel panel-default">
+                      <div class="speaker-wrapper">
+                        <img src="{% static 'img/speaker/jorge_aguilera.png' %}" class="img-responsive img-circle" alt="Foto Jorge Aguilera" />
+                      </div>
+                      <div class="panel-heading">
+                        <div class="panel-title">
+                          <div class="time"><i class="fa fa-clock-o"></i>
+                            12.00
+                          </div>
+                          <a data-toggle="collapse" data-parent="#panelTimelineTwo" href="#item10" class="collapsed">
+                            UX móvil como negocio
+                            <div class="pull-right fa fa-angle-up"></div>
+                            <div class="pull-right fa fa-angle-down"></div>
+                          </a>
+                        </div>
+                      </div>
+
+                      <div id="item10" class="panel-collapse collapse">
+                        <div class="panel-body">
+                          <article>
+                            <p>Charla orientada a informáticos, diseñadores y público en general,
+                            donde se expondrán los conceptos más relevantes a la hora de construir
+                            una aplicación móvil.
+                            El foco es la construción de una buena experiencia de usuario, basado en
+                            consideraciones comerciales, visuales y de comportamiento, con el fin de
+                            aumentar la probabilidad de éxito de una aplicación.
+                            </p>
+                            <p class="author"><a><strong><i class="fa fa-user"></i>@jmaurock</strong></a></p>
+                          </article>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Charla 10 -->
+
+                    <!-- Charla 11 -->
                     <div class="panel panel-default">
                       <div class="speaker-wrapper">
                         <img src="{% static 'img/speaker/esteban_huenuman.jpg' %}" class="img-responsive img-circle" alt="Foto Esteban Huenuman" />
@@ -693,7 +728,7 @@ ingeniería de software
                           <div class="time"><i class="fa fa-clock-o"></i>
                             15.00
                           </div>
-                          <a data-toggle="collapse" data-parent="#panelTimelineTwo" href="#item10" class="collapsed">
+                          <a data-toggle="collapse" data-parent="#panelTimelineTwo" href="#item11" class="collapsed">
                             Mobile-QTI: Sistema Interactivo de Aprendizaje Móvil bajo la Especificación IMS-QTI para Evaluación Formativa.
                             <div class="pull-right fa fa-angle-up"></div>
                             <div class="pull-right fa fa-angle-down"></div>
@@ -701,7 +736,7 @@ ingeniería de software
                         </div>
                       </div>
 
-                      <div id="item10" class="panel-collapse collapse">
+                      <div id="item11" class="panel-collapse collapse">
                         <div class="panel-body">
                           <article>
                             <p>El uso de nuevas tecnologías en las salas de clase ya no es
@@ -721,7 +756,7 @@ ingeniería de software
                         </div>
                       </div>
                     </div>
-                    <!-- End Charla 8 -->
+                    <!-- End Charla 11 -->
 
 
                     <!-- END CHARLAS DIA 2-->
@@ -922,7 +957,7 @@ ingeniería de software
                   <!-- END Presentaciones HACK NIGHT-->
 
 
-                  <!-- Presentaciones HACK NIGHT-->
+                  <!-- Premiacion HACK NIGHT-->
                   <div class="panel panel-default">
                     <div class="speaker-wrapper">
                       <img src="{% static 'img/logo_vmc.png' %}" class="img-responsive img-circle" alt="Logo Organizador" />
@@ -932,7 +967,7 @@ ingeniería de software
                         <div class="time"><i class="fa fa-clock-o"></i>
                           10/10 - 18:30
                         </div>
-                        <a data-toggle="collapse" data-parent="#panelTimelineFour" href="#itemfive" class="collapsed">
+                        <a data-toggle="collapse" data-parent="#panelTimelineFive" href="#itemfive" class="collapsed">
                           Premiación
                           <div class="pull-right fa fa-angle-up"></div>
                           <div class="pull-right fa fa-angle-down"></div>
@@ -950,7 +985,7 @@ ingeniería de software
                       </div>
                     </div>
                   </div>
-                  <!-- END Presentaciones HACK NIGHT-->
+                  <!-- END Premiacion HACK NIGHT-->
 
                 </div>
               </div>
@@ -1055,7 +1090,7 @@ ingeniería de software
           <div class="img-wrapper">
           <img src="{% static 'img/speaker/juan_calderon.jpg' %}" class="img-responsive img-circle" alt="Foto Juan Felipe Calderón" />
           </div>
-          <div class="name">Juan Felipe Calderón Maureira</div>
+          <div class="name">Juan Felipe Calderón</div>
           <div class="sub">Profesor Jornada completa en U. Andrés Bello</div>
           <p class="small"></p>
           <div class="social-link">
@@ -1110,6 +1145,24 @@ ingeniería de software
       </div>
 
       <div class="clearfix visible-xs"></div>
+    </section>
+    <section class="row">
+
+      <div class="col-md-3 col-sm-3 col-xs-6">
+        <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
+          <div class="img-wrapper">
+          <img src="{% static 'img/speaker/jorge_aguilera.png' %}" class="img-responsive img-circle" alt="Foto Jorge Aguilera" />
+          </div>
+          <div class="name">Jorge Aguilera</div>
+          <div class="sub">CEO en Elun</div>
+          <p class="small"></p>
+          <div class="social-link">
+            <a href="https://twitter.com/jmaurock"><span class="fa fa-twitter"></span></a>
+            <a href="https://www.linkedin.com/in/jorgeaguilerayantani"><span class="fa fa-linkedin"></span></a>
+          </div>
+        </div>
+      </div>
+
 <!-- Por confirmar
       <div class="col-md-3 col-sm-3 col-xs-6">
         <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
@@ -1124,26 +1177,9 @@ ingeniería de software
           </div>
         </div>
       </div>
-
 -->
-
-<!-- Por confirmar
-      <div class="col-md-3 col-sm-3 col-xs-6">
-        <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
-          <div class="img-wrapper">
-          <img src="{% static 'img/speaker/juan_calderon.jpg' %}" class="img-responsive img-circle" alt="Foto Juan Felipe Calderón" />
-          </div>
-          <div class="name">Juan Felipe Calderón Maureira</div>
-          <div class="sub">Profesor Jornada Ing. Civil Informática en U. Andrés Bello</div>
-          <p class="small"></p>
-          <div class="social-link">
-            <a href="https://cl.linkedin.com/pub/juan-felipe-calder%C3%B3n-maureira/10/b40/8b6"><span class="fa fa-linkedin"></span></a>
-          </div>
-        </div>
-      </div>
-
       <div class="clearfix visible-xs"></div>
--->
+
 
 <!-- Por confirmar
       <div class="col-md-3 col-sm-3 col-xs-6">
