--- a/main/static/register_pitch.html
+++ b/main/static/register_pitch.html
@@ -14,8 +14,8 @@
       <form class="form form-register" method="post" action="" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="form-group">
-          <label for="id_app_name" class="col-sm-3 col-xs-12 control-label">Nombre de tu app</label>
-          <div class="col-sm-9 col-xs-12">
+          <label for="id_app_name" class="col-sm-2 col-xs-12 control-label">Nombre de tu app</label>
+          <div class="col-sm-10 col-xs-12">
            <input type="text" class="form-control required" name="app_name" id="id_app_name" placeholder="Nombre de tu app" value="{{form.app_name.value|default:''}}">
 	    {{form.app_name.help_text}}
              {{form.app_name.errors}}
@@ -23,8 +23,8 @@
         </div>
 
         <div class="form-group">
-          <label for="id_description" class="col-sm-3 col-xs-12 control-label">Descripción</label>
-          <div class="col-sm-9 col-xs-12">
+          <label for="id_description" class="col-sm-2 col-xs-12 control-label">Descripción</label>
+          <div class="col-sm-10 col-xs-12">
             <textarea class="form-control required" name="description" id="id_description" placeholder="Descripción" >{{form.description.value|default:''}}</textarea>
             {{form.description.help_text}}
             {{form.description.errors}}
@@ -32,8 +32,8 @@
         </div>
 
         <div class="form-group">
-          <label for="id_name" class="col-sm-3 col-xs-12 control-label">Creador</label>
-          <div class="col-sm-4 col-xs-12">
+          <label for="id_name" class="col-sm-2 col-xs-12 control-label">Creador</label>
+          <div class="col-sm-5 col-xs-12">
             <input type="text" class="form-control required" name="name" id="id_name" placeholder="Nombre" value="{{form.name.value|default:''}}">
               {{form.name.help_text}}
               {{form.name.errors}}
@@ -47,8 +47,8 @@
         </div>
 
         <div class="form-group">
-          <label for="id_email" class="col-sm-3 col-xs-12 control-label">Email</label>
-          <div class="col-sm-9 col-xs-12">
+          <label for="id_email" class="col-sm-2 col-xs-12 control-label">Email</label>
+          <div class="col-sm-10 col-xs-12">
             <input type="email" class="form-control required email" name="email" id="id_email" placeholder="Email" value="{{form.email.value|default:''}}">
             {{form.email.help_text}}
             {{form.email.errors}}
@@ -56,17 +56,17 @@
         </div>
 
         <div class="form-group">
-          <label for="id_phone" class="col-sm-3 col-xs-12 control-label">Fono (opcional)</label>
-          <div class="col-sm-9 col-xs-12">
-            <input type="text" class="form-control required" name="phone" id="id_phone" placeholder="Teléfono" value="{{form.phone.value|default:''}}">
+          <label for="id_phone" class="col-sm-2 col-xs-12 control-label">Fono (opcional)</label>
+          <div class="col-sm-10 col-xs-12">
+            <input type="text" class="form-control" name="phone" id="id_phone" placeholder="Teléfono" value="{{form.phone.value|default:''}}">
             {{form.phone.help_text}}
             {{form.phone.errors}}
           </div>
         </div>
 
         <div class="form-group">
-          <label for="id_paper-doc" class="col-sm-3 col-xs-12 control-label">Archivo (PPT, PDF, etc. si deseas, para apoyar la presentación)</label>
-          <div class="col-sm-9 col-xs-12">
+          <label for="id_extras" class="col-sm-2 col-xs-12 control-label">Archivo (PPT, PDF. Opcional)</label>
+          <div class="col-sm-10 col-xs-12">
             {{form.extras}}
             {{form.extras.help_text}}
             {{form.extras.errors}}
