Agrega boton inscribirme en el inicio

--- a/main/static/index.html
+++ b/main/static/index.html
@@ -66,6 +66,9 @@
               <div class="hero-normal">desde Valparaíso para todo Chile</div>
             </div>
           </div>
+          <div class="row">
+            <a href="https://eventioz.cl/e/valparaiso-mobile-conf?from_button=yes&source=orevib&utm_campaign=or_valparaiso-mobile-conf&utm_content=integrated_button&utm_medium=integration_tool&utm_source=eventioz" target="_blank"><img src="https://eventioz.cl/e/valparaiso-mobile-conf/promotion_button.png?size=large&content=Inscribirme+ahora&from=FE4918&to=FE4918&font=FFFFFF" alt="Eventioz - valparaiso-mobile-conf"></a>
+          </div>
         </div>
       </div>
     </div>
