--- a/static/index.html
+++ b/static/index.html
@@ -1013,7 +1013,9 @@ ingeniería de software
   <section id="speakers" class="section light">
     <div class="overlay"></div>
     <div class="container">
-    <div class="icon-wrap"><span class="icon icon-active icon-multimedia-12"></span></div>
+    <div class="icon-wrap">
+      <i class="fa fa-graduation-cap"></i>
+    </div>
     <h3>Expositores</h3>
     <div class="sub-title">Expertos compartirán su experiencia con nosotros.</div>
     <br />
@@ -1277,14 +1279,14 @@ ingeniería de software
       <div class="row">
         <div class="col-md-offset-3 col-md-3 col-sm-3 col-xs-6">
           <a href="" class="thumb-wrapper fancybox" data-fancybox-group="gallery">
-            <div class="overlay">1 Moto 360</div>
+            <div class="overlay">2 Moto 360</div>
             <img src="{% static 'img/moto_360.jpg' %}" class="img-responsive" alt="Moto 360" />
           </a>
         </div>
 
         <div class="col-md-3 col-sm-3 col-xs-6">
           <a href="" class="thumb-wrapper fancybox" data-fancybox-group="gallery">
-            <div class="overlay">2 Moto G 2° Generación</div>
+            <div class="overlay">2 Moto G 2° Gen</div>
             <img src="{% static 'img/moto_g.png' %}" class="img-responsive" alt="Moto G" />
           </a>
         </div>
